:bug: fix: Adjust spacing in projects list

--- a/src/features/Projects/Projects.scss
+++ b/src/features/Projects/Projects.scss
@@ -376,7 +376,7 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
     .projects-list{
-        gap: 8PX*2;
+        gap: 8PX*3;
         grid-template-columns: 1fr 1fr 1fr  ;
     }
 }
